--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgreSQL://localhost/FIBADI
-spring.datasource.username=postgre
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/FIBADI
+spring.datasource.username=postgres
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
